ggplot 0.6
----------------------------------------
  
  * new geom_rug to add marginal rug plots
  * all discrete scales now have labels argument which you can use to override the factor levels
  * new stat_spoke to make it possible to use geom_segment parameterised by angle and radius (thanks to Jiho for the suggestion)
  * new stat_function makes it easy to superimpose a function on the plot
  * the middle line geom_crossbar is now display thicker than the other lines, controlled by the parameter fatten (thanks to Heike Hofmann for the suggestion)
  * geom_vline, geom_hline and geom_abline should now behave better in a wider variety of settings
  * convenient auto wrapping of simple summary functions for stat_sum
  * better documentation for stat_sum
  * na.rm added to the following statistics: stat_boxplot, stat_contour, stat_density2d, stat_qq, stat_density (thanks to Leena Choi for suggesting this)
  * fixed bug in stat_bin which resulted in increased counts when the x axis was a categorical variable with a single level (thanks to Bob Muenchen for pointing this out!)
  * fixed bug in geom_smooth where if se=FALSE x axis always includes 0

Speed and documentation.  Profiling and complete rdoc documentation

  * allow qplot to use computed aesthetics too
  * add start and direction parameters to coord_polar, giving more control over the layout of the polar coords
  * added my favourite pie chart example to coord_polar
  * fixed some examples where grob used instead of guide
  
Examples

  * now easy to run all examples with all_examples_run(), or for an individual object with (e.g.) GeomPoint$examples_run()

See CHANGELOG for changes in previous versions